# low-quality-mod

./: CMakeLists.txt  README.md  about.md  mod.json
.github/workflows/: build.yml
